--- a/src/app/components/redirect/redirect.component.html
+++ b/src/app/components/redirect/redirect.component.html
@@ -29,11 +29,7 @@
 </p>
 <p class="center">
   If you are not redirected in 3 seconds please follow this
-  <a
-    href="https://api.hostmonkey.io/api/v1/links/{{ urlShort }}"
-    rel="noopener noreferrer"
-    >link</a
-  >.
+  <a href="{{ urls.longUrl }}" rel="noopener noreferrer">link</a>.
 </p>
 <div></div>
 <script
