minor logic update for failure of redirect

--- a/src/app/components/redirect/redirect.component.html
+++ b/src/app/components/redirect/redirect.component.html
@@ -29,7 +29,7 @@
 </p>
 <p class="center">
   If you are not redirected in 3 seconds please follow this
-  <a href="{{ urls.longUrl }}" rel="noopener noreferrer">link</a>.
+  <a href="{{ urlLong }}" rel="noopener noreferrer">link</a>.
 </p>
 <div></div>
 <script
