another small change on routing logic and made some toast in the details component

--- a/src/app/components/display-task/display-task.component.html
+++ b/src/app/components/display-task/display-task.component.html
@@ -100,7 +100,7 @@
             <button
               type="button"
               class="btn btn-info button-margin btn-xs"
-              [routerLink]="['/edit', url.shortUrl]"
+              [routerLink]="['/details', url.shortUrl]"
             >
               Details
             </button>
