edit model to date and changed link to Click Here

--- a/src/app/components/redirect/redirect.component.html
+++ b/src/app/components/redirect/redirect.component.html
@@ -28,8 +28,8 @@
   hardware solutions.
 </p>
 <p class="center">
-  If you are not redirected in 3 seconds please follow this
-  <a href="{{ urlLong }}" rel="noopener noreferrer">link</a>.
+  If you are not redirected in 3 seconds please
+  <a href="{{ urlLong }}" rel="noopener noreferrer">Click Here</a>.
 </p>
 <div></div>
 <script
