--- a/src/app/components/display-task/display-task.component.html
+++ b/src/app/components/display-task/display-task.component.html
@@ -1,9 +1,8 @@
 <div class="container">
   <ngb-alert type="custom" [dismissible]="false">
-    <strong>NOTICE!</strong> All links can now be accessed through
+    <strong>NOTICE!</strong> All links can must be accessed through
     https://hostm.io/<code>whateverTheLinkIs</code>. All old format links with
-    "/s/" will still operate as normal until support is removed for this format
-    on Friday, April 1st 2022.
+    "/s/" will no longer operate as of Saturday, March 26th 2022.
   </ngb-alert>
 
   <div class="col-12 col-sm-12 col-md-12 col-lg-12">
@@ -104,11 +103,6 @@
             >
               Details
             </button>
-            <!-- <a href="/edit/{{ url._id }}"
-        ><button type="button" class="btn btn-danger button-margin btn-xs">
-          Edit
-        </button></a
-      > -->
           </div>
         </div>
       </div>
