--- a/src/app/components/display-task/display-task.component.html
+++ b/src/app/components/display-task/display-task.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <ngb-alert type="custom" [dismissible]="false">
-    <strong>NOTICE!</strong> All links can must be accessed through
+    <strong>NOTICE!</strong> All links must be accessed through
     https://hostm.io/<code>whateverTheLinkIs</code>. All old format links with
     "/s/" will no longer operate as of Saturday, March 26th 2022.
   </ngb-alert>
