404 handling resolved for now

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark myNav">
-  <div class="container">
+  <div class="container-fluid">
     <a class="navbar-brand" [routerLink]="['/urls']"
       ><img
         src="/assets/images/android-chrome-512x512.png"
@@ -36,9 +36,6 @@
             >Links</a
           >
         </li>
-        <!-- <li class="nav-item">
-            <a class="nav-link" href="/add">Add URL</a>
-          </li> -->
         <li class="nav-item">
           <a
             class="nav-link"
