patched redirect 404 logic and json handling

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -61,5 +61,10 @@
         </ul>
       </div>
     </div>
+    <p class="center">
+      Made with
+      <span style="color: red">&#10084;</span>
+      in Oregon
+    </p>
   </footer>
 </div>
