added support for titles across application

--- a/src/app/components/redirect/redirect.component.html
+++ b/src/app/components/redirect/redirect.component.html
@@ -4,48 +4,47 @@
   srcset=""
   class="center-block"
 />
-<!-- <img
-  src="../../assets/images/redirecting-gif.gif"
-  alt="Avernix Technologies"
-  srcset=""
-  class="center-block"
-/> -->
-<!-- <h1 class="center">Redirecting...</h1> -->
 <div class="container">
-  <img
-    src="../../assets/images/redirecting-gif.gif"
-    alt="Avernix Technologies"
-    srcset=""
-    width="100%"
-    max-height="auto"
-    class="center-block"
-  />
+  <div class="row">
+    <div class="col-md-12">
+      <div class="container">
+        <img
+          src="../../assets/images/redirecting-gif.gif"
+          alt="Avernix Technologies"
+          srcset=""
+          width="100%"
+          max-height="auto"
+          class="center-block"
+        />
+      </div>
+      <br />
+      <p class="center">
+        Fun Fact! HostMio an Avernix Technologies project. Avernix Technologies
+        is a company that specializes in the development of software and
+        hardware solutions.
+      </p>
+      <p class="center">
+        If you are not redirected in 3 seconds please
+        <a href="{{ urlLong }}" rel="noopener noreferrer">Click Here</a>.
+      </p>
+      <div></div>
+      <script
+        async
+        src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5134980856971407"
+        crossorigin="anonymous"
+      ></script>
+      <!-- Bottom rocker -->
+      <ins
+        class="adsbygoogle"
+        style="display: block"
+        data-ad-client="ca-pub-5134980856971407"
+        data-ad-slot="3575957358"
+        data-ad-format="auto"
+        data-full-width-responsive="true"
+      ></ins>
+      <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+      </script>
+    </div>
+  </div>
 </div>
-<br />
-<p class="center">
-  Fun Fact! HostMio by HostMonkey is an Avernix Technologies project. Avernix
-  Technologies is a company that specializes in the development of software and
-  hardware solutions.
-</p>
-<p class="center">
-  If you are not redirected in 3 seconds please
-  <a href="{{ urlLong }}" rel="noopener noreferrer">Click Here</a>.
-</p>
-<div></div>
-<script
-  async
-  src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5134980856971407"
-  crossorigin="anonymous"
-></script>
-<!-- Bottom rocker -->
-<ins
-  class="adsbygoogle"
-  style="display: block"
-  data-ad-client="ca-pub-5134980856971407"
-  data-ad-slot="3575957358"
-  data-ad-format="auto"
-  data-full-width-responsive="true"
-></ins>
-<script>
-  (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
