--- a/src/app/components/display-task/display-task.component.html
+++ b/src/app/components/display-task/display-task.component.html
@@ -1,10 +1,5 @@
 <div class="container">
-  <ngb-alert type="custom" [dismissible]="false">
-    <strong>NOTICE!</strong> All links must be accessed through
-    https://hostm.io/<code>whateverTheLinkIs</code>. All old format links with
-    "/s/" will no longer operate as of Saturday, March 26th 2022.
-  </ngb-alert>
-
+  <h1 class="center">Welcome to HostMio</h1>
   <div class="col-12 col-sm-12 col-md-12 col-lg-12">
     <div class="card text-center urlCards">
       <h5 class="card-header">Create a link</h5>
