utilize clicks endpoint from HostMio api

--- a/src/app/components/task-details/task-details.component.html
+++ b/src/app/components/task-details/task-details.component.html
@@ -18,6 +18,7 @@
           >{{ detailTask.longUrl }}</a
         >
       </div>
+      <p class="card-text">Clicks: {{ detailTask.clicks }}</p>
       <p class="card-text">Expires: {{ detailTask.expireAt }}</p>
       <button
         type="button"
