fix logo and meta data

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -2,12 +2,12 @@
   <div class="container-fluid">
     <a class="navbar-brand" [routerLink]="['/urls']"
       ><img
-        src="/assets/images/android-chrome-512x512.png"
-        width="30"
+        src="/assets/images/newHostMioLogo-white-zoomed.png"
+        width="120"
         height="30"
         class="d-inline-block align-top"
         alt=""
-      />HostMio <span class="hide-on-small">by Avernix Technologies</span></a
+      /><span class="hide-on-small">by Avernix Technologies</span></a
     >
     <button
       class="navbar-toggler d-lg-none"
