testing patch for redirect logic

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -6,7 +6,7 @@
         width="120"
         height="30"
         class="d-inline-block align-top"
-        alt=""
+        alt="HostMio by Avernix Technologies"
       /><span class="hide-on-small">by Avernix Technologies</span></a
     >
     <button
