fix inline styling on footer to get rid of stupid yellow squigly

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -63,7 +63,7 @@
     </div>
     <p class="center">
       Made with
-      <span style="color: red">&#10084;</span>
+      <span class="theHeart">&#10084;</span>
       in Oregon
     </p>
   </footer>
