Added resolver to preload data, updated routing

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -34,7 +34,7 @@
           <li>
             <a
               class="text-muted"
-              [routerLink]="['/disclaimer']"
+              [routerLink]="['/legal/disclaimer']"
               routerLinkActive="active"
               [routerLinkActiveOptions]="{ exact: true }"
               >Disclaimer</a
@@ -43,7 +43,7 @@
           <li>
             <a
               class="text-muted"
-              [routerLink]="['/policy']"
+              [routerLink]="['/legal/policy']"
               routerLinkActive="active"
               [routerLinkActiveOptions]="{ exact: true }"
               >Privacy</a
@@ -52,7 +52,7 @@
           <li>
             <a
               class="text-muted"
-              [routerLink]="['/tos']"
+              [routerLink]="['/legal/tos']"
               routerLinkActive="active"
               [routerLinkActiveOptions]="{ exact: true }"
               >Terms</a
