update logo and add load timings

--- a/src/app/components/display-task/display-task.component.html
+++ b/src/app/components/display-task/display-task.component.html
@@ -97,8 +97,8 @@
               routerLink="/{{ url.shortUrl }}"
               target="_blank"
               rel="noopener noreferrer"
-              >https://hostm.io/{{ url.shortUrl }}</a
-            >
+              >https://hostm.io/{{ url.shortUrl }}
+            </a>
           </h5>
           <div class="card-body">
             <div
