add some extra social links, removed resolver on link details, added message for failing to extend expire date

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -134,6 +134,17 @@
               <hr class="dropdown-divider" />
             </li>
             <li><a class="dropdown-item" href="#">Login/Signup</a></li>
+            <!-- <li>
+              <div
+                class="badge-base LI-profile-badge"
+                data-locale="en_US"
+                data-size="small"
+                data-theme="light"
+                data-type="VERTICAL"
+                data-vanity="kylewheeless"
+                data-version="v1"
+              ></div>
+            </li> -->
           </ul>
         </li>
       </ul>
