--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -16,8 +16,8 @@
         <h5>Features</h5>
         <ul class="list-unstyled text-small">
           <li><a class="text-muted" href="#">Custom Domains</a></li>
-          <li><a class="text-muted" href="#">Team Accounts</a></li>
-          <li><a class="text-muted" href="#">Stuff for developers</a></li>
+          <li><a class="text-muted" href="#">Teams</a></li>
+          <li><a class="text-muted" href="#">Stuff for Devs</a></li>
         </ul>
       </div>
       <div class="col-6 col-md">
@@ -56,6 +56,38 @@
               routerLinkActive="active"
               [routerLinkActiveOptions]="{ exact: true }"
               >Terms</a
+            >
+          </li>
+        </ul>
+      </div>
+      <div class="col-6 col-md">
+        <h5>Me</h5>
+        <ul class="list-unstyled text-small">
+          <li>
+            <a
+              class="text-muted"
+              target="_blank"
+              rel="noopener noreferrer"
+              href="https://github.com/wheeless"
+              >GitHub</a
+            >
+          </li>
+          <li>
+            <a
+              class="text-muted"
+              target="_blank"
+              rel="noopener noreferrer"
+              href="https://www.instagram.com/kwheel_s/"
+              >Instagram</a
+            >
+          </li>
+          <li>
+            <a
+              class="text-muted"
+              href="https://www.linkedin.com/in/kylewheeless/"
+              target="_blank"
+              rel="noopener noreferrer"
+              >LinkedIn</a
             >
           </li>
         </ul>
