--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -63,6 +63,15 @@
             >Why HostMio?</a
           >
         </li>
+        <li class="nav-item">
+          <a
+            class="dropdown-item"
+            href="https://resume.io/r/rkQ8QAHzA"
+            target="_blank"
+            rel="noopener noreferrer"
+            >Resume</a
+          >
+        </li>
         <li class="nav-item dropdown">
           <a
             class="nav-link dropdown-toggle"
