--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -65,7 +65,7 @@
         </li>
         <li class="nav-item">
           <a
-            class="dropdown-item"
+            class="nav-link"
             href="https://resume.io/r/rkQ8QAHzA"
             target="_blank"
             rel="noopener noreferrer"
