--- a/src/app/components/redirect/redirect.component.html
+++ b/src/app/components/redirect/redirect.component.html
@@ -2,6 +2,8 @@
   src="../../assets/images/avernix-black.png"
   alt="Avernix Technologies"
   srcset=""
+  width="25%"
+  max-height="250px"
   class="center-block"
 />
 <div class="container">
@@ -13,7 +15,7 @@
           alt="Avernix Technologies"
           srcset=""
           width="100%"
-          max-height="auto"
+          max-height="250px"
           class="center-block"
         />
       </div>
