--- a/src/app/components/display-task/display-task.component.html
+++ b/src/app/components/display-task/display-task.component.html
@@ -42,7 +42,7 @@
               <label for="expireDate">Expire Date</label>
               <input
                 class="form-control"
-                type="date"
+                type="datetime-local"
                 name="expireDate"
                 id="expireDate"
                 [(ngModel)]="url.expireAt"
