update button for extending expire date to reflect if link has been deactivated or not

--- a/src/app/components/task-details/task-details.component.html
+++ b/src/app/components/task-details/task-details.component.html
@@ -27,7 +27,9 @@
       </p>
       <button
         type="button"
-        class="btn btn-info btn-xs"
+        class="btn btn-info btn-xs {{
+          detailTask.deactivated === true ? 'disabled' : ''
+        }}"
         (click)="patchExpireDate(detailTask.shortUrl)"
       >
         Extend
