--- a/src/app/components/deactivated-links/deactivated-links.component.html
+++ b/src/app/components/deactivated-links/deactivated-links.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1 class="center">Welcome to HostMio</h1>
+  <h1 class="center">Deactivated Links</h1>
   <div class="col-12 col-sm-12 col-md-12 col-lg-12">
     <div class="row">
       <button
