--- a/src/app/components/pricing/pricing.component.html
+++ b/src/app/components/pricing/pricing.component.html
@@ -7,7 +7,8 @@
 </div>
 <div class="container">
   <div class="aligned-left">
-    Are you a student? Click here to see if you are eligible for 3mo free!
+    Are you a Learning Source student? Click here to see if you are eligible for
+    3mo free!
   </div>
   <div class="card-deck mb-3 text-center row">
     <div class="card mb-4 box-shadow col-12 col-sm-6 col-md-4 col-lg-3">
