--- a/src/app/components/add-task/add-task.component.html
+++ b/src/app/components/add-task/add-task.component.html
@@ -1,39 +1,68 @@
-<div class="container">
-  <h1>Add a URL</h1>
-  <form>
-    <label for="longUrl" class="form-label"
-      >Long Url (Make sure it is a full URL)</label
-    >
-    <input
-      type="url"
-      id="longUrl"
-      class="form-control"
-      placeholder="https://example.com"
-      pattern="^(http(s)?:\/\/)+[\w\-\._~:\/?#[\]@!\$&'\(\)\*\+,;=.]+$"
-      oninvalid="this.setCustomValidity('Please match the requested format')"
-      [(ngModel)]="url.longUrl"
-      [ngModelOptions]="{ standalone: true }"
-      required
-    />
-    <br />
-    <label for="shortUrl">Short Url (Leave blank to randomize)</label>
-    <input
-      type="text"
-      id="shortUrl"
-      class="form-control"
-      placeholder="Enter Short URL"
-      [(ngModel)]="url.shortUrl"
-      [ngModelOptions]="{ standalone: true }"
-    />
-
-    <br />
-    <button
-      type="submit"
-      class="btn btn-success"
-      id="createNewTask"
-      (click)="addTask()"
-    >
-      Create Short Link
-    </button>
-  </form>
+<div class="col-12 col-sm-12 col-md-12 col-lg-12">
+  <div class="card text-center urlCards">
+    <h5 class="card-header">Create a link</h5>
+    <div class="card-body">
+      <form>
+        <label for="longUrl" class="form-label"
+          >Long Url (Make sure it is a full URL)</label
+        >
+        <input
+          type="url"
+          id="longUrl"
+          class="form-control"
+          placeholder="https://example.com"
+          [(ngModel)]="url.longUrl"
+          pattern="^(http(s)?:\/\/)+[\w\-\._~:\/?#[\]@!\$&'\(\)\*\+,;=.]+$"
+          oninvalid="this.setCustomValidity('Please match the requested format')"
+          [ngModelOptions]="{ standalone: true }"
+          required
+        />
+        <br />
+        <div class="row">
+          <div class="col-12 col-sm-12 col-md-12 col-lg-6">
+            <label for="shortUrl">Short Url</label>
+            <div class="input-group">
+              <span class="input-group-text" id="basic-addon3"
+                >https://hostm.io/</span
+              >
+              <input
+                type="text"
+                id="shortUrl"
+                class="form-control"
+                placeholder="random if blank"
+                [(ngModel)]="url.shortUrl"
+                [ngModelOptions]="{ standalone: true }"
+              />
+            </div>
+          </div>
+          <br />
+          <div class="col-12 col-sm-12 col-md-12 col-lg-6">
+            <label for="expireDate">Expire Date</label>
+            <input
+              class="form-control"
+              type="date"
+              name="expireDate"
+              id="expireDate"
+              [(ngModel)]="url.expireAt"
+            />
+          </div>
+        </div>
+        <br />
+        <button
+          type="submit"
+          class="btn btn-success"
+          id="createNewTask"
+          (click)="sendForAdd()"
+        >
+          Create Short Link
+        </button>
+        <input type="hidden" id="timezone" name="timezone" value="-00:00" />
+      </form>
+      <br />
+      <div class="alert alert-danger" role="alert">
+        Due to an unintended bug, please click "Refresh Links" after creating a
+        new shortened link.
+      </div>
+    </div>
+  </div>
 </div>
