--- a/src/app/components/add-task/add-task.component.html
+++ b/src/app/components/add-task/add-task.component.html
@@ -60,8 +60,8 @@
       </form>
       <br />
       <div class="alert alert-danger" role="alert">
-        Due to an unintended bug, please click "Refresh Links" after creating a
-        new shortened link.
+        Due to an unintended "feature", please click "Refresh Links" after
+        creating a new shortened link.
       </div>
     </div>
   </div>
